--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "watch": "tsc -w",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
-    "postinstall": "prisma generate"
+    "dev": "ts-node-dev src/index.ts",
+    "postinstall": "prisma migrate deploy"
   },
   "author": "",
   "license": "ISC",
