--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev src/index.ts",
-    "postinstall": "prisma migrate deploy"
+    "postinstall": "prisma generate"
   },
   "author": "",
   "license": "ISC",
